--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "ef232980-ec92-45bf-b9c6-fc3af4c1b45e",
    "metadata": {},
    "outputs": [
@@ -231,11 +231,17 @@
       "P\n",
       "t\n",
       "n\n",
+      "e\n",
       "1111111111111111111111111111\n",
       "\n",
       "yth\n",
+      "yth\n",
+      "yoie\n",
       "Pyt\n",
-      "thon\n",
+      "thon is easy to learn\n",
+      "nrael ot ysae si nohtyP\n",
+      "l ot ysae si noh\n",
+      "asy to \n",
       "22222222222222222222222222222\n",
       "\n",
       "ython i\n",
@@ -243,15 +249,22 @@
       "s a easy to learn.\n",
       "33333333333333333333333333333\n",
       "\n",
-      "Python is fun!\n",
-      "PythonPythonPython\n",
+      "Python is easy to learn is fun!\n",
+      "Python is easy to learnPython is easy to learnPython is easy to learn\n",
       "True\n",
       "False\n",
       "44444444444444444444444444444\n",
       "\n",
-      "python\n",
-      "PYTHON\n",
-      "Mython\n",
+      "26\n",
+      "  python is cool language \n",
+      "  PYTHON IS COOL LANGUAGE \n",
+      "  mython is cool language \n",
+      "3\n",
+      "  python is cool language \n",
+      "  Python Is Cool Language \n",
+      "python is cool language \n",
+      "  python is cool language\n",
+      "python is cool language\n",
       "5555555555555555555555555555555\n",
       "\n",
       "['today', ' is a good day', ' to learn something new.']\n"
@@ -260,18 +273,27 @@
    ],
    "source": [
     "# String declaration\n",
-    "s = \"Python\"\n",
+    "s = \"Python is easy to learn\" # or 'Python', str('Python'), str(90)\n",
     "\n",
     "# Accessing elements\n",
     "print(s[0])    # 'P' (First character)\n",
     "print(s[2])    # 't'\n",
-    "print(s[-1])   # 'n' (Last character)\n",
+    "print(s[-1]) # 'n' (Last character)\n",
+    "print(s[-4]) # 'e' (4th car from  end)\n",
     "print(\"1111111111111111111111111111\\n\")\n",
     "\n",
-    "# Slicing\n",
+    "# Slicing : [start_position: end_position: step_size]. \n",
+    "# start_position by default is 0, end_position by defualt last idx, step_size by default is 1\n",
+    "print(s[1:4:1]) # 'yth' (From index 1 to 3 with  step size 1) \n",
     "print(s[1:4])  # 'yth' (From index 1 to 3)\n",
+    "print(s[1:13:3]) # 'yoie' (From index 1 to 4 to 7 to 11.with  step size 1) \n",
+    "\n",
     "print(s[:3])   # 'Pyt' (First 3 characters)\n",
-    "print(s[2:])   # 'thon' (From index 2 to end)\n",
+    "print(s[2:])   # 'thon is easy to learn' (From index 2 to end)\n",
+    "\n",
+    "print(s[::-1]) # 'nrael ot ysae si nohtyP' (start from last idx and go backward)\n",
+    "print(s[-5:2:-1]) # 'l ot ysae si noh' (start from idx -5, 5th from last, go upto idx 2, with step size -1, backward)\n",
+    "print(s[-12:-5]) # 'asy to' (start from  idx -12 to idx -5, 12th from last to 5th last cahr)\n",
     "print(\"22222222222222222222222222222\\n\")\n",
     "\n",
     "# Slicing\n",
@@ -296,14 +318,85 @@
     "print(\"44444444444444444444444444444\\n\")\n",
     "\n",
     "# String methods\n",
-    "print(s.lower())  # 'python'\n",
-    "print(s.upper())  # 'PYTHON'\n",
-    "print(s.replace(\"Py\", \"My\"))  # 'Mython'\n",
+    "s = \"  python is cool language \" \n",
+    "print(len(s))\n",
+    "print(s.lower())  \n",
+    "print(s.upper())  \n",
+    "print(s.replace(\"py\", \"my\"))  \n",
+    "print(s.count('o'))\n",
+    "print(s.capitalize())\n",
+    "print(s.title())\n",
+    "\n",
+    "print(s.lstrip()) # Removes empty spaces from left\n",
+    "print(s.rstrip())\n",
+    "print(s.strip()) #Removes all empty spaces from left and right\n",
     "print(\"5555555555555555555555555555555\\n\")\n",
     "\n",
     "msg = \"today, is a good day, to learn something new.\"\n",
     "lst = msg.split(\",\")\n",
     "print(lst) # ['today', ' is a good day', ' to learn something new.']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8663b4ac-fb8b-4332-918e-209c193a246a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m7\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[1;32m----> 4\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mb\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(res)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "# You cannot add numeric types to string\n",
+    "a = \"7\"\n",
+    "b = 5\n",
+    "res = a+b\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c0f9e48f-9a6b-49a2-905b-f2e0f1bb3f82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77777\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what about multiply ???\n",
+    "# You cannot add numeric types to string\n",
+    "a = \"7\"\n",
+    "b = 5\n",
+    "res = a*b\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "671174c5-5396-4fd5-86d9-f7df2b3a645c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python  is immutable\n",
+    "s='Republic'\n",
+    "s[0]='Z'\n",
+    "s # We get a error"
    ]
   },
   {
@@ -317,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "039f8240-de2c-4c64-8a5c-679e2948f8cb",
    "metadata": {},
    "outputs": [
@@ -326,7 +419,9 @@
      "output_type": "stream",
      "text": [
       "[10, 20, 30, 40, 50]\n",
-      "<class 'list'>\n"
+      "<class 'list'>\n",
+      "[1, 2, 3]\n",
+      "['h', 'e', 'l', 'l', 'o']\n"
      ]
     }
    ],
@@ -335,12 +430,58 @@
     "numbers = [10, 20, 30, 40, 50]\n",
     "\n",
     "print(numbers)\n",
-    "print(type(numbers))"
+    "print(type(numbers))\n",
+    "\n",
+    "my_numbers = list((1, 2, 3))  # Note: double parentheses!\n",
+    "print(my_numbers)\n",
+    "\n",
+    "chars = list(\"hello\")  # ['h', 'e', 'l', 'l', 'o']\n",
+    "print(chars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "c6356123-cfb5-41e6-a7c0-8c99735a8c81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "['apple', 'banana', 'cucumber']\n",
+      "[True, True, False]\n",
+      "[20, 'apple']\n",
+      "[[20, 'apple'], [1, 3, 4]]\n",
+      "[1, 3, '6', (3+7j), True, ['h', 'e', 'l', 'l', 'o'], [1, 2, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what types of elements in list ?\n",
+    "my_list = [] # empty list\n",
+    "print(my_list)\n",
+    "\n",
+    "my_list = [\"apple\", \"banana\",\"cucumber\"] \n",
+    "print(my_list)\n",
+    "\n",
+    "my_list = [True, True, False]\n",
+    "print(my_list)\n",
+    "\n",
+    "my_list = [20, \"apple\"] # list of integers, strings\n",
+    "print(my_list)\n",
+    "\n",
+    "my_list = [ [20, \"apple\"], [1, 3, 4] ] # list of list\n",
+    "print(my_list)\n",
+    "\n",
+    "fancy_list = [1, 3, '6', 3+7j, True, chars, [1,2,6], ]\n",
+    "print(fancy_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "bb2e3919-52b0-4dfe-bc9f-d0fa8a9110f1",
    "metadata": {},
    "outputs": [
@@ -355,14 +496,18 @@
       "1111111111111111111111111111\n",
       "\n",
       "[20, 30]\n",
-      "[10, 20]\n",
+      "[10, 20, 30]\n",
       "[30, 40, 50]\n",
+      "[10, 30, 50]\n",
+      "[50, 40, 30, 20, 10]\n",
       "222222222222222222222222222222\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "\n",
     "# Accessing elements\n",
     "print(numbers[0])   # prints 1st number in the list 10\n",
     "print(numbers[1])   # prints 2nd number in the list 20\n",
@@ -375,12 +520,14 @@
     "print(numbers[1:3])  # slice 2nd number to 3rd number: [20, 30]\n",
     "print(numbers[:3])   # slice [10, 20, 30]\n",
     "print(numbers[2:])   # slice from index 2 to last [30, 40, 50]\n",
+    "print(numbers[::2]) # from begin to end with step size =2\n",
+    "print(numbers[::-1]) # reverse\n",
     "print(\"222222222222222222222222222222\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "562fac51-7dc0-4f68-a053-bf8cd24f3e57",
    "metadata": {},
    "outputs": [
@@ -389,29 +536,69 @@
      "output_type": "stream",
      "text": [
       "numbers after append: [10, 20, 30, 40, 50, 17]\n",
-      "numbers after insert: [10, 20, 30, 25, 40, 50, 17]\n",
-      "numbers after remove: [10, 20, 30, 25, 40, 17]\n",
-      "numbers after insert in the begn: [-6, 10, 20, 30, 25, 40, 17]\n"
+      "numbers after insert: [10, 20, 30, 25, 40, 50]\n",
+      "numbers after remove: [10, 20, 30, 40]\n",
+      "numbers after pop: [10, 20, 40, 50]\n",
+      "numbers after insert in the begn: [-6, 10, 20, 30, 40, 50]\n",
+      "mutablility: numbers: [10, 20, 25, 40, 50]\n"
      ]
     }
    ],
    "source": [
-    "numbers = [10, 20, 30, 40, 50]\n",
-    "\n",
     "# List modification\n",
-    "numbers.append(17)  # Adds 17 at the end\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "numbers.append(17)  # Adds 17 at the end. NOTE: Try appending string, list, empty string, etc\n",
     "print(f\"numbers after append: {numbers}\")  \n",
     "\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
     "numbers.insert(3, 25)  # Insert 25 at index 3\n",
     "print(f\"numbers after insert: {numbers}\")  \n",
     "\n",
-    "numbers.remove(50)  # Remove value 50\n",
-    "print(f\"numbers after remove: {numbers}\")  \n",
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "numbers.remove(50) # works on actual number\n",
+    "print(f\"numbers after remove: {numbers}\")\n",
+    "\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "numbers.pop(2) # works on actual index\n",
+    "print(f\"numbers after pop: {numbers}\")\n",
+    "\n",
     "\n",
     "#########Assignemnt############\n",
     "# How to put -6 in the begining of list ?\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
     "numbers.insert(0,-6)\n",
-    "print(f\"numbers after insert in the begn: {numbers}\")"
+    "print(f\"numbers after insert in the begn: {numbers}\")\n",
+    "\n",
+    "## list is mutable\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "numbers[2] = 25\n",
+    "print(f\"mutablility: numbers: {numbers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "359cf52c-fe63-4f75-a454-495634df9a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', ['cherry', 'date']]\n",
+      "['apple', 'banana', 'cherry', 'date']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# difference between  append and extend\n",
+    "fruits = ['apple', 'banana']\n",
+    "fruits.append(['cherry', 'date'])\n",
+    "print(fruits)\n",
+    "\n",
+    "fruits = ['apple', 'banana']\n",
+    "fruits.extend(['cherry', 'date']) # extend unpackss the list\n",
+    "print(fruits)"
    ]
   },
   {
@@ -491,6 +678,45 @@
     "#lets create a list numbers starting with 1, skipping 3 values , and print upto 10\n",
     "l_skip = list(range(1,11,3))\n",
     "print(f\"range: {l_skip}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "373b69dd-1357-4a97-870b-82519266ec5d",
+   "metadata": {},
+   "source": [
+    "### built-in operations and functions on  list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0d6b360a-36f8-4dc2-914c-3bc04993f3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "40\n",
+      "100\n",
+      "4\n",
+      "[10, 20, 30, 40]\n",
+      "25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [10, 20, 30, 40]\n",
+    "print(min(numbers))\n",
+    "print(max(numbers))\n",
+    "print(sum(numbers))\n",
+    "print(len(numbers))\n",
+    "print(sorted(numbers)) # NOTE: it would not work if list contains int, str, bool mixed type\n",
+    "\n",
+    "average = sum(numbers)/len(numbers)\n",
+    "print(average)"
    ]
   },
   {
