--- a/tut_py_2_type_part2_dict_set.ipynb
+++ b/tut_py_2_type_part2_dict_set.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1dffc368-8dca-42c1-9920-125c751d2529",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 85, 'Bob': 92, 'Charlie': 78}\n"
+      "{'Alice': 85, 'Bob': 92, 'Charlie': 78}\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
@@ -38,6 +39,47 @@
     "                  \"Charlie\": 78\n",
     "}\n",
     "\n",
+    "print(student_scores)\n",
+    "print(type(student_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "78e344a7-c5f8-4225-90a9-d56dfb8e5bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 100, 'B': 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_scores = dict([('A',100),('B',300)])\n",
+    "print(student_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2ea4fc56-44d2-4ae6-9b68-cec71728c280",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': 85, 'Bob': 20}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_scores = {}\n",
+    "student_scores['Alice'] = 85\n",
+    "student_scores['Bob'] = 20\n",
     "print(student_scores)"
    ]
   },
@@ -223,7 +265,7 @@
    "id": "e93c24d9-f77d-4151-95d8-f731fc567d3a",
    "metadata": {},
    "source": [
-    "### 5️. Removing an Entry from a Dictionary\n",
+    "### 5️. Removing an Entry(or clearing) from a Dictionary\n",
     "Scenario: Removing a student's score."
    ]
   },
@@ -243,6 +285,52 @@
    ],
    "source": [
     "student_scores.pop(\"Charlie\")  # Remove Charlie\n",
+    "print(student_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5c5d1e1e-ad21-4947-853c-a76b718bf0e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': 85, 'Charlie': 78}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_scores = {\"Alice\": 85, \n",
+    "                  \"Bob\": 92,\n",
+    "                  \"Charlie\": 78\n",
+    "}\n",
+    "del student_scores['Bob']\n",
+    "print(student_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b8a2c3e6-1b0d-4490-a48c-b5f86fd17407",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_scores = {\"Alice\": 85, \n",
+    "                  \"Bob\": 92,\n",
+    "                  \"Charlie\": 78\n",
+    "}\n",
+    "student_scores.clear()\n",
     "print(student_scores)"
    ]
   },
@@ -386,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "428c8aeb-5b3e-4b1a-8287-9e122f876795",
    "metadata": {},
    "outputs": [
