--- a/tut_py_3_for_ifelse.ipynb
+++ b/tut_py_3_for_ifelse.ipynb
@@ -166,6 +166,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "e616c1ab-a509-4e35-b8f9-fc7831fb36cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The i value is 0\n",
+      "The i value is 1\n",
+      "The i value is 2\n",
+      "The i value is 3\n",
+      "The i value is 4\n",
+      "The i value is 5\n",
+      "The i value is 6\n",
+      "The i value is 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,8):\n",
+    "    print(f\"The i value is {i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "17fc7ed4-f1e1-448b-8003-694f3b41f2c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The i value is 0\n",
+      "The i value is 3\n",
+      "The i value is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,8,3):\n",
+    "    print(f\"The i value is {i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "83658d8b-bff1-448c-8ef0-962cc48dc97c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 103 106 109 112 115 118 121 124 127 130 133 136 139 142 145 148 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100,150,3):\n",
+    "    print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "1e3f5df0-5ad5-4a88-bbb3-28a8a9bf1f8c",
    "metadata": {},
@@ -184,6 +250,28 @@
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
     "for fruit in fruits:\n",
     "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ded904d5-8a83-417b-94cf-8dfc78a6a107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love apple\n",
+      "I love banana\n",
+      "I love cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "for fruit in fruits:\n",
+    "    print(f\"I love {fruit}\")"
    ]
   },
   {
@@ -277,7 +365,68 @@
    "id": "05ba9f55-4226-41f1-a7b8-8c82fe190439",
    "metadata": {},
    "source": [
-    "## if - else"
+    "## if - else\n",
+    "```\n",
+    "if  [boolean_expression1]:\n",
+    "    statements1\n",
+    "elif [boolean_expression2]:\n",
+    "    statements2\n",
+    "elif [boolean_expression3]:\n",
+    "    statements3\n",
+    "else\n",
+    "    statements4\n",
+    "```     \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5221b0b0-aea6-4cfc-9e5e-05f6f11cedc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is greatenr than 5\n",
+      "I am happy for x\n",
+      "are you happy for x?\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "if x > 5:\n",
+    "    print(\"x is greatenr than 5\")\n",
+    "    print(\"I am happy for x\")\n",
+    "    print(\"are you happy for x?\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fa01516e-5ea3-48f4-8e83-1244905d2912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is greatenr than 5\n",
+      "I am happy for x\n",
+      "are you happy for x?\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10 # change x to 4\n",
+    "if x > 5:\n",
+    "    print(\"x is greater than 5\")\n",
+    "    print(\"I am happy for x\")\n",
+    "print(\"are you happy for x?\")    \n",
+    "    "
    ]
   },
   {
@@ -302,6 +451,64 @@
     "    print(\"x is less than 5\")\n",
     "else:\n",
     "    print(\"x is not less than 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "70dae8a0-9f62-4cbc-a699-254b73cc844a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:  ash\n",
+      "Enter your age:  45\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello ash! You are younger than 100 year old man.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program to calculate the year user turns 100, with an if condition\n",
+    "name = input(\"Enter your name: \")\n",
+    "age = int(input(\"Enter your age: \"))\n",
+    "\n",
+    "if age < 100:\n",
+    "    print(f\"Hello {name}! You are younger than 100 year old man.\")\n",
+    "elif age == 100:\n",
+    "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
+    "else:\n",
+    "    print(f\"Hey {name}, you are older than 100 years old man.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1564d31-7736-486e-a83a-41feefcbc336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Program to calculate the year user turns 100, with an if condition\n",
+    "\n",
+    "name = input(\"Enter your name: \")\n",
+    "age = int(input(\"Enter your age: \"))\n",
+    "\n",
+    "current_year = 2025\n",
+    "\n",
+    "if age < 100:\n",
+    "    year_when_100 = current_year + (100 - age)\n",
+    "    print(f\"Hello {name}! You will turn 100 years old in the year {year_when_100}.\")\n",
+    "elif age == 100:\n",
+    "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
+    "else:\n",
+    "    print(f\"Hey {name}, you turned 100 years old {age - 100} years ago.\")\n"
    ]
   },
   {
@@ -514,9 +721,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81b31fc3-73c6-4bd3-93d1-2cbdfa8e443c",
+   "metadata": {},
+   "source": [
+    "## for and if"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a08f4fdd-15d6-4a75-80b6-115aaec80dc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210 231 252 273 294 315 336 357 378 399 "
+     ]
+    }
+   ],
+   "source": [
+    "# find all numbers between 200 and 400 that are divisible by 3 and 7\n",
+    "for num in range(200, 401):\n",
+    "    if num % 3 == 0 and num % 7 == 0:\n",
+    "        print(num, end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "63bf5f6e-e804-4e59-86cf-ca09661ccb1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201 203 204 207 210 213 216 217 219 222 224 225 228 231 234 237 238 240 243 245 246 249 252 255 258 259 261 264 266 267 270 273 276 279 280 282 285 287 288 291 294 297 300 301 303 306 308 309 312 315 318 321 322 324 327 329 330 333 336 339 342 343 345 348 350 351 354 357 360 363 364 366 369 371 372 375 378 381 384 385 387 390 392 393 396 399 "
+     ]
+    }
+   ],
+   "source": [
+    "# find all numbers between 200 and 400 that are divisible by 3 or 7\n",
+    "for num in range(200, 401):\n",
+    "    if num % 3 == 0 or num % 7 == 0:\n",
+    "        print(num, end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "abfa2cd3-81e6-4947-ad6b-24dc7967619f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[201, 203, 204, 207, 210, 213, 216, 217, 219, 222, 224, 225, 228, 231, 234, 237, 238, 240, 243, 245, 246, 249, 252, 255, 258, 259, 261, 264, 266, 267, 270, 273, 276, 279, 280, 282, 285, 287, 288, 291, 294, 297, 300, 301, 303, 306, 308, 309, 312, 315, 318, 321, 322, 324, 327, 329, 330, 333, 336, 339, 342, 343, 345, 348, 350, 351, 354, 357, 360, 363, 364, 366, 369, 371, 372, 375, 378, 381, 384, 385, 387, 390, 392, 393, 396, 399]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find all numbers between 200 and 400 that are divisible by 3 or 7, and save them in  a list\n",
+    "result = [num for num in range(200, 401) if num % 3 == 0 or num % 7 == 0]\n",
+    "print(result)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb1e5efa-f3a9-45f0-aced-e1c070e59a5b",
+   "id": "df11b52f-d309-4b24-b2dc-7499d8b4b564",
    "metadata": {},
    "outputs": [],
    "source": []
