--- a/tut_py_3_function_0_input.ipynb
+++ b/tut_py_3_function_0_input.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# in built function:\n",
+    "print, input, int, float, len, range, type, map, filter, any, etc"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Function"
+    "## User defined Function"
    ]
   },
   {
@@ -719,7 +727,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## examples "
+    "# Miscellaneous\n",
+    "## examples of some more in built functions "
    ]
   },
   {
