--- a/tut_py_3_while.ipynb
+++ b/tut_py_3_while.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a7bbf204-5c54-4c81-bc6a-ae28d20dfbe5",
+   "metadata": {},
+   "source": [
+    "## while\n",
+    "```\n",
+    "while [boolean_expression]:\n",
+    "    stmt1\n",
+    "    stmt2\n",
+    "    .\n",
+    "    .\n",
+    "    stmtn\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5c3d2f52-a962-4d73-bb47-dd72315696cf",
@@ -25,6 +41,102 @@
     "while i <= 5:\n",
     "    print(i)\n",
     "    i += 1  # Increment i\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4a50d4e8-b29f-4db8-a304-ee1d69b71345",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i <= 5:\n",
+    "    print(i, end=\" \")\n",
+    "    i += 1  # Increment i\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "04c6c8f9-4c54-43ec-9e8f-a901616b4b5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while True:\n",
+    "    print(i, end=\" \")\n",
+    "    i += 1  # Increment i\n",
+    "    if i == 6:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a6e54dd0-21af-4456-96f9-b11b4f1c153a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while True:\n",
+    "    print(i, end=\" \")\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    i += 1  # Increment i\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ea4aebf7-fb20-4326-8428-fd011c2b33bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print even numbers between 1 and 10 using while loop and continue\n",
+    "num = 0\n",
+    "while num < 10:\n",
+    "    num += 1\n",
+    "    if num % 2 != 0:\n",
+    "        continue  # Skip odd numbers\n",
+    "    print(num)\n"
    ]
   },
   {
